# snmp-to-icinga

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
config/: schema.yaml
src/: snmpicinga.py  snmplog.py  utils.py
