[metadata]
name = snmp-to-icinga
version = 0.3
author = Rob Weber
author_email = rweber@ecec.com
description = Funnel SNMP trap data to Icinga
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eau-claire-energy-cooperative/snmp-to-icinga
project_urls =
    Bug Tracker = https://github.com/eau-claire-energy-cooperative/snmp-to-icinga/issues
classifiers =
    Development Status :: 2 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
install_requires =
  pyyaml
  cerberus
  jinja2
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.extras_require]
dev =
  flake8

[options.packages.find]
where = src

[flake8]
max-line-length = 150
